# okf-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
okf/: __init__.py  cli.py  create.py  lint.py  parse.py  query.py  validate.py
sample-bundle/: index.md  log.md
sample-bundle/datasets/: index.md  sales.md  users.md
sample-bundle/tables/: customers.md  index.md  orders.md  products.md
skills/okf/: SKILL.md
