[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf"
version = "0.1.0"
description = "Open Knowledge Format (OKF) toolkit — validate, query, lint, and create OKF bundles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
okf = "okf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["okf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
